Fix !ENABLE(INSPECTOR) build after r173929 https://bugs.webkit.org/show_bug.cgi?id=137210

Patch by Tibor Meszaros <tmeszaros.u-szeged@partner.samsung.com> on 2014-09-29
Reviewed by Timothy Hatcher.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::getLaunchOptions):

Canonical link: https://commits.webkit.org/155007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174061 268f45cc-cd09-0410-ab3c-d52691b4dbfc